assets/style.css
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;700&family=Montserrat&display=swap");

body,
html {
  height: 100%;
  margin: 0;
  text-align: center;
  background: rgb(225, 180, 211);
  background: linear-gradient(
    99deg,
    rgba(225, 180, 211, 1) 20%,
    rgba(174, 221, 239, 1) 41%,
    rgba(234, 219, 128, 1) 99%
  );
}

h1 {
  font-family: "Comfortaa", cursive;
  font-weight: bold;
  font-size: 270%;
}

nav {
  background-color: #f7eae2;
}

a.navbar-brand {
  font-family: "Comfortaa", cursive;
  font-weight: bolder;
  font-size: 200%;
  background: linear-gradient(
    90deg,
    rgba(225, 180, 211, 1) 20%,
    rgba(234, 219, 128, 1) 54%,
    rgba(174, 221, 239, 1) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

h2 {
  font-family: "Comfortaa", cursive;
  font-weight: lighter;
  font-size: 280%;
}

p {
  font-family: "Montserrat", sans-serif;
  font-size: 120%;
}

form {
  display: inline-block;
}

button {
  bottom: 0;
  margin: 0;
  position: absolute;

  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  
}

.btn-info {
  color: black;
  background-color: #f7eae2;
  border-color: #f7eae2;
}

.btn:hover {
  color:rgba(174, 221, 239, 1);
}

footer {
  margin-top: auto;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
}

.logo {
  font-size: 390%;
  text-align: center;
  background: linear-gradient(
    90deg,
    rgba(225, 180, 211, 1) 20%,
    rgba(234, 219, 128, 1) 54%,
    rgba(174, 221, 239, 1) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.slogan {
  font-size: 200%;
  text-align: center;
  color: #f7eae2;
}

.register-text {
  text-align: center;
}

.hero-image {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(../assets/Images/heroimage.JPG);
  height: 600px;
  width: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  
}

/* Events */
.event-image img {
 border-radius: 50%;
 height: 200px;
 width: 200px;
 position: relative;
}

/* Dividers*/
hr {
  width: 100px;
  height: 5px;
  border: 0;
  background-color: #f7eae2;
}

footer a {
  font-size: 1.5em;
  padding: 0 10px;
}

.footer-icons {
  color: #f7eae2;
}

/* How are we section */
.card {
  background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
  border: none; 
}

.card-deck {
  margin: 0 20px 20px 20px;
}

.card-body{
  margin: 1.5em 1.5em;
}

#testimonials {
  margin-top: 50px;
  margin-bottom: 100px;
  min-height: 25%;
  background-color: #fff ;
  margin-left: 5%;
  margin-right: 5%;
}

.testimonial-text {
  margin-top: 5%;
  font-size: 180%;
  line-height: 1.5;
}

.testimonial-image {
  width: 10%;
  border-radius: 100%;
  margin: 20px;
}


/* MEDIA QUERRIES */

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  /* Footer */
footer {
  position: fixed;
  margin-top: auto;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
}

/* Special margins / padding */
#testimonials {
 max-width: 98%;
}
}

/* Large devices (Laptops/desktops, 992px to 1200px) */
@media (min-width: 992px) {

/* Special margins / padding */
#testimonials {
  margin-left: 2.5%;
  margin-right: 2.5%;
}
}

